# uad-3-6-validation

./: .gitignore  CNAME  README.md  pyproject.toml  run-app.bat  xsd-extraction.txt
.github/workflows/: pages.yaml
app/: main.py
app/api/: routes.py
app/core/: config.py  iri_minting.py
app/generators/: __init__.py  arcrole_vocabulary.py
app/models/: common.py  ingestion.py  rules.py  schema_validation.py  validation.py
app/projections/: xsd_to_rdf.py
app/services/: ingestion.py  validation.py  xml_schema_validator.py
docs/architecture/: urar-meaning-model.md  web-diagnosis.md
docs/decisions/: README.md  adr-0003-generated-semantic-assets.md  adr-0004-meaning-first-ontology-development.md  adr-0005-single-logical-ontology.md  adr-0006-ontology-test-driven-development.md  adr-0007-shacl-validation-without-inference.md  adr-0009-uad-sample-artifact-policy.md  adr-0010-role-based-user-experience.md  adr-0011-knowledge-centric-user-interface.md  adr-0012-validation-derived-analytics-and-ai-assistance.md  (+3 more)
docs/otdd/: README.md  (+5 more)
features/: ingest-uad-3.6-specification-assets.feature  validate-uad-3.6-appraisal-report-package.feature
metadata/: otdd-sample-index.ttl
ontologies/: README.md  uad36-core.ttl  urar-shapes.ttl
site/: index.html
specs/: Appendix H-1 UAD Compliance Rules - URAR.xlsm
tests/: test_arcrole_vocabulary_generator.py  test_complex_type_vocabulary_generator.py  test_iri_minting.py  test_ontology_files.py  test_urar_shapes.py  test_validation_api.py
uad-3-6-validation/: .gitignore  README.md  pyproject.toml
utilities/: README.md
(+112 files in other folders)
